bare-metal-ingress/resources/ingress-demo-web-one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-one
  labels:
    name: nginx-one
spec:
  volumes:
    - name: webdata
      emptyDir: {}
  containers:
    - image: nginx
      name: nginx
      volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
