bare-metal-ingress/resources/ingress-resource-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  rules:
  - host: one.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-one
          servicePort: 80
